hw-20-03/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client-pod
spec:
  containers:
  - name: multitool-client
    image: praqma/network-multitool
    command: ["sleep", "3600"]
