hw-20-03/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-app-nodeport
spec:
  type: NodePort
  selector:
    app: multi-app
  ports:
  - name: nginx-port
    port: 80         
    targetPort: 80    
    nodePort: 30080
    protocol: TCP
