hw-20-03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-app-service
spec:
  selector:
    app: multi-app
  ports:
  - name: nginx-port
    port: 9001
    targetPort: 80
    protocol: TCP
  - name: multitool-port
    port: 9002
    targetPort: 8080
    protocol: TCP
